src/components/armory/armory.css
#armory {
    width: 100%;
    min-height: calc(var(--vh, 1vh) * 100);
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    position: relative;
}
.armory_character_background {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow:hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1;
}
.armory_character_background img {
    min-width: 100%;
    min-height: 100%;
    object-position: center calc(50% - 100px);
    object-fit: cover;
}
#armory:after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    display: block;
    width: 100%;
    height: 200px;
    background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, var(--dark_blue) 100%);
    background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%, var(--dark_blue) 100%);
    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, var(--dark_blue) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#0f091b',GradientType=0 );
    z-index: 1;
}
#armory .wrapper {
    position: relative;
    z-index: 2;
    padding: 60px 0;
}
.armory_items_container {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    flex-wrap: wrap;
    width: 100%;
}
.armory_items_container_left,
.armory_items_container_right,
.armory_items_container_center {
    width: calc( (100% - 20px) / 3 );
}
.armory_items_container_center {
    height: 100%;
    min-height: 560px;
}
.armory_items_container_left ul,
.armory_items_container_right ul {
}
.armory_items_container_left ul > li,
.armory_items_container_right ul > li {
    height: 60px;
    width: 100%;
    margin-bottom: 10px;
}
.armory_items_container_weapon {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}
.armory_items_container_weapon {
    margin-top: 60px;
}
.armory_items_container_weapon ul {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}
.armory_items_container_weapon ul > li {
    height: 60px;
    width: calc( (100% - 20px) / 3 );
}
.armory_items_container_weapon ul > li:first-child {
    margin-right: 10px;
}
@media screen and (max-width: 990px) {
    .armory_character_background img {
        object-position: center calc(50% - 50px);
        object-fit: cover;
        height: 100%;
        width: auto;
    }
    .armory_items_container_left ul > li,
    .armory_items_container_right ul > li {
        height: 40px;
        width: 40px;
    }
    .armory_items_container_weapon ul > li {
        height: 40px;
        width: 40px;
    }
    .armory_items_container_left,
    .armory_items_container_right{
        width: 40px;
    }
    .armory_items_container_center {
        width: calc(100% - 80px);
        height: 100%;
        min-height: 400px;
    }
    .armory_items_container_weapon{
        margin-top: 20px;
    }
}

